// Application: Sample-01

import org.apache.tools.ant.taskdefs.condition.Os

buildscript {
    repositories {
        jcenter()
//        mavenLocal()
//        mavenCentral()
        /* ATTACH CUSTOM BUILDS OF GRADLE PLUGINS FROM '~/gradle/plugins' folder */
//        flatDir { dirs rootProject.projectDir.toString() + '/gradle/plugins' }
    }
    dependencies {
        classpath 'com.android.tools.build:gradle:1.+'
        classpath 'org.robolectric:robolectric-gradle-plugin:+'
        /* https://github.com/kt3k/coveralls-gradle-plugin */
        classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:${CoverallsVersion}"
    }
}

// CONFIGURATION based on: http://tools.android.com/tech-docs/new-build-system/user-guide

apply plugin: 'com.android.application'
apply plugin: 'com.github.kt3k.coveralls'

/* DEFINE REPOSITORY WITH LATEST ROBOLECTRIC VERSION */
repositories {
    mavenCentral()
}

dependencies {
    /* ----------------------------- */
    /* RELEASE and DEBUG COMPILATION */
    /* ----------------------------- */
    compile "com.android.support:support-v4:${androidSupportLib}"
    compile "com.android.support:appcompat-v7:${androidSupportLib}"
//    compile 'com.android.support:multidex:1.0.0'
    compile project(':library')

    compile fileTree(dir: 'libs', include: ['*.jar'])

    /* -------------------------- */
    /* UNIT TESTING configuration */
    /* -------------------------- */
    if (useTesting) {
        // custom libs of the sample
        androidTestCompile fileTree(dir: 'libs', include: ['*.jar'])

        /* UNIT TESTS HAS DEPENDENCY ON SUPPORT LIB, SO INCLUDE IT MANUALLY FOR CONTROLLING THE VERSION OF IT */
        androidTestCompile "com.android.support:support-v4:${androidSupportLib}"
//        androidTestCompile 'com.android.support:multidex-instrumentation:1.0.0'

        /* Hamcrest (v1.4) */
        androidTestCompile 'org.hamcrest:hamcrest-core:+',
                'org.hamcrest:hamcrest-library:+',
                'org.hamcrest:hamcrest-integration:+'

        /* Dagger (v1.2.2) */
        androidTestCompile 'com.squareup.dagger:dagger:+'

        /* Mockito (v2.0.2-beta) */
        androidTestCompile 'org.mockito:mockito-core:+',
                'com.google.dexmaker:dexmaker-mockito:+'

        /* Fest Android (v1.0.8), fest util (v1.2.5), Fest core (v 2.0M10) */
        androidTestCompile 'com.squareup:fest-android:+@aar'

        /* jUnit (v4.12) */
        androidTestCompile 'junit:junit:+'

        if (useEspresso) {
            /* Espresso (v2.0) */
            androidTestCompile 'com.android.support.test:testing-support-lib:+',
                    'com.android.support.test.espresso:espresso-core:+',
                    'com.android.support.test.espresso:espresso-contrib:+'
        }

        if (useRobolectric) {
            /* Robolectric (v2.4) */
            androidTestCompile('org.robolectric:robolectric:+') {
                exclude module: 'classworlds'
                exclude module: 'commons-logging'
                exclude module: 'httpclient'
                exclude module: 'maven-artifact'
                exclude module: 'maven-artifact-manager'
                exclude module: 'maven-error-diagnostics'
                exclude module: 'maven-model'
                exclude module: 'maven-project'
                exclude module: 'maven-settings'
                exclude module: 'plexus-container-default'
                exclude module: 'plexus-interpolation'
                exclude module: 'plexus-utils'
                exclude module: 'wagon-file'
                exclude module: 'wagon-http-lightweight'
                exclude module: 'wagon-provider-api'
                /* already included by other modules */
                exclude group: 'com.android.support', module: 'support-v4'
                exclude group: 'org.easytesting', module: 'fest-util'
                exclude group: 'org.objenesis', module: 'objenesis'
            }
        }
    }
}

android {
    /* INHERIT SETTINGS FROM THE ROOT PROJECT */
    compileSdkVersion androidCompileSdkVersion
    buildToolsVersion androidBuildToolsVersion

    /* ATTACH TEST INSTRUMENTATION, DEFINE SDK VERSION, DEFINE APP VERSION */
    defaultConfig {
        minSdkVersion androidMinSdkVersion
        targetSdkVersion androidTargetSdkVersion
        /*useJack true*/

        multiDexEnabled false
        applicationId 'com.artfulbits.benchmark.sample'
        versionCode 1
        versionName "1.0"

        if (useTesting) {
            //testApplicationId 'com.artfulbits.benchmark.sample.tests'

            if (useEspresso) {
                /* attach espresso runner */
                /* v1.0 */
                // testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
                /* v2.0 */
                testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
            } else {
                /* default unit testing runner */
                testInstrumentationRunner "android.test.InstrumentationTestRunner"
//                testInstrumentationRunner "android.support.multidex.MultiDexTestRunner"
            }
        }
    }

    /* REDEFINE TESTS FOLDER */
    sourceSets {
        androidTest.setRoot('src/test')
        androidTest {
            // UNCOMMENT for enabling 'custom manifest for unit tests' feature (part #1 of 2):
            // manifest.srcFile 'src/test/AndroidManifest.xml'

            /* exclude Espresso tests if tools is not attached */
            if (!useEspresso) {
                java.exclude '**/espresso/**'
            }

            /* exclude robolectric tests */
            if (!useRobolectric) {
                java.exclude '**/robolectric/**'
            }
        }

        debug.setRoot('build-types/debug')
        release.setRoot('build-types/release')
    }

    // signing keystores configuration
    signingConfigs {
        // custom debug key, allows to test social networks
        debug {
            storeFile file("${rootProject.rootDir}/gradle/release/artfulbits.debug.keystore")

            keyAlias 'androiddebugkey'
            storePassword 'android'
            keyPassword 'android'
        }
        // production key
        release {
            storeFile file("${rootProject.rootDir}/gradle/release/artfulbits.keystore")

            keyAlias 'artfulbits'
            storePassword 'kPJ6LIl6nZV3'
            keyPassword 'j6m8gPYjL1e3'
        }
    }

    /* CONFIGURE OBFUSCATION AND OPTIMIZATION, SIGNATURES */
    buildTypes {
        // release configuration
        release {
            signingConfig signingConfigs.release

            minifyEnabled false
            shrinkResources false /* !!! incompatible with useJack !!! */
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        // debug configuration with custom debug key
        debug {
            signingConfig signingConfigs.debug

            minifyEnabled false
            shrinkResources false
            debuggable true
            jniDebuggable true
            testCoverageEnabled true
        }
        // release without obfuscation
        noProguardRelease.initWith(buildTypes.release)
        noProguardRelease {
            minifyEnabled false
            shrinkResources false
        }
        // release with enabled debug options
        debuggableRelease.initWith(buildTypes.noProguardRelease)
        debuggableRelease {
            debuggable true
            jniDebuggable true
        }
    }

    /* EXCLUDE SOME UNNEEDED FILES FROM PACKAGE */
    packagingOptions {
        exclude 'LICENSE.txt'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/DEPENDENCIES.txt'
        exclude 'META-INF/dependencies.txt'
        exclude 'META-INF/LGPL2.1'
        exclude '.readme'
        exclude '.README'
        exclude 'LICENSE'
        exclude 'NOTICE'
    }

    /* be specific about JaCoCo version. */
    jacoco {
        version JaCoCoVersion
    }

    /* GIVE DEX MORE MEMORY */
    dexOptions {
//        incremental true
//        jumboMode true
        preDexLibraries false
        javaMaxHeapSize "4g"
    }

    /* Java compatibility - set to v1.7 */
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_7
        targetCompatibility JavaVersion.VERSION_1_7
    }

    /* CUSTOM STEPS */
    // UNCOMMENT for enabling 'custom manifest for unit tests' feature (part #2 of 2):
    // force Unit Tests use our own AndroidManifest.xml instead of auto-generated
    //    testVariants.all { variant ->
    //        variant.processResources.manifestFile = android.sourceSets["androidTest"].manifest.srcFile
    //        logger.info(">>>>>> Unit Tests new manifest: " + variant.processResources.manifestFile)
    //    }

    /* CUSTOMIZE OUTPUT FILE NAME */
    applicationVariants.all { variant ->
        variant.outputs.each { output ->
            def String ANDROID_NAME_SPACE = "http://schemas.android.com/apk/res/android"

            // for Debug:
            //        rootProject.logger.lifecycle('----------------------------------')
            //        variant.properties.each { rootProject.logger.lifecycle("$it.key -> $it.value"); }
            //        rootProject.logger.lifecycle('----------------------------------')

            def manifestPath = android.sourceSets["main"].manifest.srcFile
            def builderFactory = javax.xml.parsers.DocumentBuilderFactory.newInstance()
            builderFactory.setNamespaceAware(true)

            // extract manifest values if AndroidManifest.xml available
            if (null != manifestPath && new File(manifestPath.toString()).exists()) {
                def manifestXml = builderFactory.newDocumentBuilder().parse(manifestPath).documentElement
                def packageName = manifestXml.getAttribute("package")
                def versionCode = manifestXml.getAttributeNS(ANDROID_NAME_SPACE, "versionCode")
                def versionName = manifestXml.getAttributeNS(ANDROID_NAME_SPACE, "versionName")
                def gitRevision = project.hasProperty("GIT_REVISION") ? project.properties["GIT_REVISION"] : "0"
                def versionType = output.name

                // modify file name
                def file = output.outputFile
                def version = versionName + "." + versionCode + "." + gitRevision
                def newFilename = packageName + "-" + version + "-" + versionType + ".apk"
                output.outputFile = new File(file.parent, newFilename)

                // dump into logs final filename
                def log = "Application variant.outputs output file name: '${newFilename}'"
                rootProject.logger.lifecycle(log)
            }
        }
    }
}

coveralls.jacocoReportPath = 'build/outputs/reports/coverage/debug/report.xml'

if (useRobolectric) {
    apply plugin: 'robolectric'

    robolectric {
        // configure the set of classes for JUnit tests
        include '**/*Test.class'
        exclude '**/espresso/**/*.class'

        // configure max heap size of the test JVM
        maxHeapSize = "4g"

        // configure some Java Virtual machine params for boosting tests running
        jvmArgs '-XX:MaxPermSize=512m'

        // configure whether failing tests should fail the build
        ignoreFailures true

        // use afterTest to listen to the test execution results
        afterTest { descriptor, result ->
            println "Executing test for {$descriptor.name} with result: ${result.resultType}"
        }
    }

    apply plugin: 'idea'

    idea {
        module {
            testOutputDir = file('build/test-classes/debug')
        }
    }
}

/* ---------------------------------------------------------------------------------------------  */
/* CUSTOM TASKS                                                                                   */
/* ---------------------------------------------------------------------------------------------  */

task openResults(dependsOn: ["openLintResults"]) {
    description = 'open Tools results in current web browser'
    group = 'Code Quality'

    logger.lifecycle(":openResults");
}

if (useRobolectric) {
    // Task opens robolectric report file in default web-browser
    task openTestResults(type: Exec, dependsOn: ["test"]) {
        description = 'open Robolectric results in current web browser'
        group = 'Code Quality'

        logger.lifecycle(":openTestResults")

        // done: force open of HTML file
        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
            // path is relative to current project path:
            //      {project}\\samples\\sample-01
            def path = """.\\build\\test-report\\index.html"""
            commandLine "cmd.exe", '/C', path

        } else {
            // this build server, or Mac OS, or Linux - ignore this call
        }
    }

    openResults.dependsOn openTestResults
}

// Task opens LINT utility report file in default web browser
task openLintResults(type: Exec, dependsOn: ["lint"]) {
    description = 'open Android Lint results in current web browser'
    group = 'Code Quality'

    logger.lifecycle(":openLintResults")

    // done: force open of HTML file
    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
        // path is relative to current project path:
        //      {project}\\samples\\sample-01
        def path = """.\\build\\lint-results.html"""
        commandLine "cmd.exe", '/C', path

    } else {
        // this build server, or Mac OS, or Linux - ignore this call
    }
}

//if (!useRobolectric) {
//    task test() {
//        group = 'Testing/QA'
//        description = 'Testing Stub task, for preventing failure of build script.'
//
//        rootProject.logger.lifecycle("--> Robolectric Unit Testings is not enabled! <--")
//    }
//}